--- a/client/src/components/pages/Profiles/Profiles.scss
+++ b/client/src/components/pages/Profiles/Profiles.scss
@@ -2,7 +2,6 @@
   position: relative;
   background: url('../../../assets/images/nature-3--1920-1280--q50.jpg') center;
   background-size: cover;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   min-height: 100vh;
 
