--- a/client/src/components/pages/Profiles/helpers/ProfileList.scss
+++ b/client/src/components/pages/Profiles/helpers/ProfileList.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 1;
   list-style: none;
-  padding: calc(var(--nav-height) + 4em) 1.5em 4em;
+  padding: calc(var(--nav-height) + 4em) 1.5em 150px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
